--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="cabecera">
         <div class="slider1">
-            <img src="images/flamas.jpg" class="img" alt="Llamas-cabecera">
+            <!-- <img src="images/flamas.jpg" class="img" alt="Llamas-cabecera"> -->
 
             <a href="index.html">
                 <img src="/images/logoF&M.png" class="logo" alt="Ir al inicio">
