agregué la parte de catálogo

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <a href="#" class="nav-lista_item-link">Novedades</a>
                 </li>
                 <li class="nav-lista_item">
-                    <a href="#" class="nav-lista_item-link">Catálogo</a>
+                    <a href="catalogo.html" class="nav-lista_item-link">Catálogo</a>
                 </li>
                 <li class="nav-lista_item">
                     <a href="#" class="nav-lista_item-link">Nuestra producción</a>
