Saqué el botón de busqueda. modif @media

--- a/catalogo.html
+++ b/catalogo.html
@@ -42,10 +42,10 @@
                 </li>
             </ul>
 
-            <form action="buscar.js" class="nav-form">
+            <!-- <form action="buscar.js" class="nav-form">
                 <input class="nav-form_input" type="search" placeholder="Buscar en el sitio">
                 <input class=""nav-form_boton type="submit" value="buscar">
-            </form>
+            </form> -->
         </nav>
 
         <h2 class="h2">Consultá nuestro catálogo de diseños</h2>
