--- a/contacto.html
+++ b/contacto.html
@@ -41,15 +41,15 @@
                 </li>
             </ul>
 
-            <form action="buscar.js" class="nav-form">
+            <!-- <form action="buscar.js" class="nav-form">
                 <input class="nav-form_input" type="search" placeholder="Buscar en el sitio">
                 <input class=""nav-form_boton type="submit" value="buscar">
-            </form>
+            </form> -->
             
         </nav>
 
         <div class="contact">
-            <h1>Contactanos</h1>
+            <h2>Contactanos</h2>
             <nav class="contact_nav">
                 <ul class="contact_nav-lista">
                     <li class="contact_nav-lista_item">
