--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
             <a href="index.html">
                 <img src="/images/logo pintura.png" class="logo" alt="Ir al inicio">
             </a>
+            <!-- <form action="buscar.js" class="nav-form">
+                <input class="nav-form_input" type="search" placeholder="Buscar en el sitio">
+                <input class=""nav-form_boton type="submit" value="buscar"> -->
         </div>
     </div>
 
@@ -42,12 +45,15 @@
                 </li>
             </ul>
 
-            <form action="buscar.js" class="nav-form">
+            <!-- <form action="buscar.js" class="nav-form">
                 <input class="nav-form_input" type="search" placeholder="Buscar en el sitio">
                 <input class=""nav-form_boton type="submit" value="buscar">
-            </form>
+            </form> -->
             
         </nav>
+
+        <h1>Bienvenido a F&M Hidrografía</h1>
+        <h2>Contanos tu idea y nosotros lo personalizamos para vos</h2>
 
         <div class="slider2">
             <img src="images/tanque-moto.jpg" alt="Foto de algo">
