modifique responsive e img-catalogo

--- a/catalogo.html
+++ b/catalogo.html
@@ -53,43 +53,47 @@
         <div class="catalogo"> 
             <div class="catalogo-elemento">
                 <h3>A001</h3>
-                <img src="/images/catalogo/1.jpg" alt="Diseño 1">
+                <img src="/images/catalogo/1.png" class="img-catalogo" alt="Diseño 1">
             </div>
             <div class="catalogo-elemento">
                 <h3>A002</h3>
-                <img src="/images/catalogo/2.jpg" alt="Diseño 2">
+                <img src="/images/catalogo/2.png" class="img-catalogo" alt="Diseño 2">
             </div>
             <div class="catalogo-elemento">
                 <h3>A003</h3>
-                <img src="/images/catalogo/3.jpg" alt="Diseño 3">
+                <img src="/images/catalogo/3.png" class="img-catalogo" alt="Diseño 3">
             </div>
             <div class="catalogo-elemento">
                 <h3>A004</h3>
-                <img src="/images/catalogo/4.jpg" alt="Diseño 4">
+                <img src="/images/catalogo/4.png" class="img-catalogo" alt="Diseño 4">
             </div>
             <div class="catalogo-elemento">
                 <h3>A005</h3>
-                <img src="/images/catalogo/5.jpg" alt="Diseño 5">
+                <img src="/images/catalogo/5.png" class="img-catalogo" alt="Diseño 5">
             </div>
             <div class="catalogo-elemento">
                 <h3>A006</h3>
-                <img src="/images/catalogo/6.jpg" alt="Diseño 6">
+                <img src="/images/catalogo/6.png" class="img-catalogo" alt="Diseño 6">
             </div>
             <div class="catalogo-elemento">
                 <h3>A007</h3>
-                <img src="/images/catalogo/7.jpg" alt="Diseño 7">
+                <img src="/images/catalogo/7.png" class="img-catalogo" alt="Diseño 7">
             </div>
             <div class="catalogo-elemento">
                 <h3>A008</h3>
-                <img src="/images/catalogo/8.jpg" alt="Diseño 8">
+                <img src="/images/catalogo/8.png" class="img-catalogo" alt="Diseño 8">
             </div>
             <div class="catalogo-elemento">
                 <h3>A009</h3>
-                <img src="/images/catalogo/9.jpg" alt="Diseño 9">
+                <img src="/images/catalogo/9.png" class="img-catalogo" alt="Diseño 9">
             </div>
             <div class="catalogo-elemento">
                 <h3>A010</h3>
-                <img src="/images/catalogo/10.jpg" alt="Diseño 10">
+                <img src="/images/catalogo/10.png" class="img-catalogo" alt="Diseño 10">
+            </div>
+            <div class="catalogo-elemento">
+                <h3>A011</h3>
+                <img src="/images/catalogo/11.png" class="img-catalogo" alt="Diseño 11">
             </div>
             
         </div>
