--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
 
     <div class="contenedor">
         <nav class="nav">
-            <ul class="nav-lista">
+            <button class="menu-hamburguesa" id="menu">
+                <img src="images/iconos-redes/hamburguer2.png" alt="desplegar menú">
+            </button>
+            <ul class="nav-lista" id="menujs">
                 <li class="nav-lista_item">
                     <a href="index.html" class="nav-lista_item-link">Home</a>
                 </li>
@@ -44,6 +47,8 @@
                     <a href="contacto.html" class="nav-lista_item-link">Contacto</a>
                 </li>
             </ul>
+
+            <script src="hamburguer.js"></script>
 
             <!-- <form action="buscar.js" class="nav-form">
                 <input class="nav-form_input" type="search" placeholder="Buscar en el sitio">
