agregue las clases para el btn

--- a/contacto.html
+++ b/contacto.html
@@ -21,7 +21,7 @@
     <div class="contenedor">
         <nav class="nav">
             <button class="menu-hamburguesa" id="menu">
-                <img src="images/iconos-redes/hamburguer3.png" alt="desplegar menú">
+                <img src="images/iconos-redes/hamburguer3.png" class="img-hamburguer" alt="desplegar menú">
             </button>
             <ul class="nav-lista" id="menujs">
                 <li class="nav-lista_item">
