hice la pagina quienes somos

--- a/contacto.html
+++ b/contacto.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    <link rel="shortcut icon" href="images/iconos-redes/favico.png">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -37,7 +38,7 @@
                     <a href="#" class="nav-lista_item-link">Nuestra producción</a>
                 </li>
                 <li class="nav-lista_item">
-                    <a href="#" class="nav-lista_item-link">Quiénes somos</a>
+                    <a href="quienes-somos.html" class="nav-lista_item-link">Quiénes somos</a>
                 </li>
                 <li class="nav-lista_item">
                     <a href="contacto.html" class="nav-lista_item-link">Contacto</a>
@@ -54,7 +55,7 @@
         </nav>
 
         <div class="contact">
-            <h2>Contactanos</h2>
+            <h1>Contactanos</h1>
             <nav class="contact_nav">
                 <ul class="contact_nav-lista">
                     <li class="contact_nav-lista_item">
