--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    <link rel="shortcut icon" href="images/iconos-redes/favico.png">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -41,7 +42,7 @@
                     <a href="#" class="nav-lista_item-link">Nuestra producción</a>
                 </li>
                 <li class="nav-lista_item">
-                    <a href="#" class="nav-lista_item-link">Quiénes somos</a>
+                    <a href="quienes-somos.html" class="nav-lista_item-link">Quiénes somos</a>
                 </li>
                 <li class="nav-lista_item">
                     <a href="contacto.html" class="nav-lista_item-link">Contacto</a>
